--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <div id="vid_630d0bc63df13e000987b217" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_630d0bc63df13e000987b217" src="https://images.converteai.net/02d00c68-9569-41fc-8eeb-6ac147740c3e/players/630d0bc63df13e000987b217/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_630d0bc63df13e000987b217" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_630d0bc63df13e000987b217">var s=document.createElement("script");s.src="https://scripts.converteai.net/02d00c68-9569-41fc-8eeb-6ac147740c3e/players/630d0bc63df13e000987b217/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
