--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://projeto-zero-barriga.pay.yampi.com.br/r/GYMUKFR4SJ" class="a-btn" style="text-decoration: none;">
+              <a href="https://protocolobarrigazero.nicepage.io/Contact-1.html?version=38525722-54f0-4425-a3ca-fec4b1ef8391&uid=8b0a4811-5859-4f01-9fd1-01bd5a6c6d28" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
